--- a/src/components/Accordion/SectionAccordion.scss
+++ b/src/components/Accordion/SectionAccordion.scss
@@ -15,11 +15,6 @@ hr {
   gap: 24px;
 }
 
-.section-accordion-sections {
-  overflow: hidden;
-  transition: height 0.3s ease-in-out;
-}
-
 .accordion-header {
   display: flex;
   align-items: center;
@@ -34,12 +29,7 @@ hr {
   }
 }
 
-.accordion-icon {
-  width: 28px;
-  height: 28px;
-
-  @media (min-width: $breakpoint-sm) {
-    width: 35px;
-    height: 35px;
-  }
+.accordion-sections {
+  overflow: hidden;
+  transition: height 0.3s ease-in-out;
 }
