--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@use "./variables.scss" as *;
+@use "/src/styles/variables.scss" as *;
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap");
 
 body,
